# fbx2glb

./: .gitignore  Makefile  README.md  batch_fbx2glb.bat  batch_fbx2glb.sh  batch_fbx2glb_final.bat  batch_fbx2glb_final.sh  batch_gltf_pipeline_draco.bat  batch_gltf_pipeline_draco.sh  batch_gltfpack.bat  batch_gltfpack.sh  fbx_to_glb.py  justfile
.github/workflows/: tauri-multi-platform.yml
electron/: .gitignore  README.md  index.html  main.cjs  package.json  pnpm-lock.yaml  preload.cjs  vite.config.js
electron/bin-darwin-arm64/: README.txt  gltfpack
electron/bin-darwin-x64/: README.txt  gltfpack
electron/bin-linux-x64/: README.txt  gltfpack
electron/bin-win-x64/: README.txt
electron/src/: main.js  style.css
electron/src/modules/: conversion.js  modelPreviewer.js
tauri/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
tauri/scripts/: clean-bundle.mjs  tauri-build.mjs
tauri/src/: main.js  style.css
tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: main.rs
tauri/src/modules/: conversion.js  modelPreviewer.js
