[package]
name = "fbx_glb_app"
version = "0.1.0"
description = "Desktop converter for FBX to GLB"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
